--- a/pokedex/app/src/main/AndroidManifest.xml
+++ b/pokedex/app/src/main/AndroidManifest.xml
@@ -5,21 +5,21 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".StartApplication"
+        android:name="com.example.pokedex.StartApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PokeApiEgsys">
-        <activity android:name=".SpashScreen">
+        <activity android:name="com.example.pokedex.SpashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.screen.activity.HomeActivity" />
+        <activity android:name="com.example.pokedex.ui.screen.activity.HomeActivity" />
         <!--            android:screenOrientation="portrait" />-->
     </application>
 
